correcting cart styles on mobile and tablet queries

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,24 +1,30 @@
 .itemContainer{
     display: flex;
     align-items: center;
-    background-color: #e7e7e7;
+    border:1px solid #e7e7e7;
     margin-block: 2rem;
+    -webkit-box-shadow:0px 0px 15px 5px rgba(0,0,0,0.49);
+    -moz-box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.49);
+    box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.49);
 }
 .buttonNImage{
-    margin-block: 2rem;
     width: 30%;
+    margin-inline: auto;
+    margin-block: 1.5rem;
+}
+.buttonContainer{
+    position: absolute;
 }
 .removeBtn{
     all: unset;
     width: 10px;
     height: 10px;
     padding: 2px;
-    border-radius: 50%;
-    border: 2px solid #000;
     text-align: center;
     line-height: 0px;
     font-family: 'Roboto';
-    margin-bottom: 2rem;
+    position: relative;
+    bottom: 85px;
 }
 .itemImage{
     width: 100px;
@@ -33,4 +39,21 @@
 }
 .infoContainer p{
     font-family: 'Roboto';
+}
+/*media querys*/
+/*tablet*/
+@media (min-width: 520px){
+    .buttonNImage img{
+        width: 150px;
+    }
+    .infoContainer{
+        width: 45%;
+    }
+    .removeBtn{
+        bottom: 120px;
+    }
+}
+/*desktop*/
+@media (min-width: 1280px){
+
 }
